k8s_deploy/ashesi/k8s.yaml

# apiVersion: v1
# kind: ConfigMap
# metadata:
#   name: ashesi-tialabs-frontend-configmap
#   namespace: "tiacourses"
# data:
#   NEXT_PUBLIC_BE_URL: https://tialabs-api.tiapod.tiacloud.dev/api/v1
#   NEXTAUTH_SECRET: dGlhbGFicwo
#   NEXTAUTH_URL: https://ashesi-tialabs-frontend.tiapod.tiacloud.dev

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ashesi-tialabs-frontend
  namespace: "tiacourses"
spec:
  selector:
    matchLabels:
      app: ashesi-tialabs-frontend
  template:
    metadata:
      labels:
        app: ashesi-tialabs-frontend
    spec:
      containers:
      - name: ashesi-tialabs-frontend
        image: ashesi-tialabs-frontend
        ports:
        - containerPort: 3000
        # envFrom:
        # - configMapRef:
        #     name: ashesi-tialabs-frontend-configmap
      restartPolicy: Always
      imagePullSecrets:
      - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: ashesi-tialabs-frontend
  namespace: tiacourses 
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ashesi.tialabs-ashesi.tiacloud.dev
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: ashesi-tialabs-frontend
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  labels:
    app: ashesi-tialabs-frontend
  name: ashesi-tialabs-frontend
  namespace: tiacourses
spec:
  rules:
  - host: ashesi.tialabs-ashesi.tiacloud.dev
    http:
      paths:
      - backend:
          service:
            name: ashesi-tialabs-frontend
            port:
              number: 3000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - ashesi.tialabs-ashesi.tiacloud.dev
    secretName: tialabs.prod.tls.wildcard.tiapod.tiacloud.dev
